--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,6 @@
   --primary-white-color: #ffffff;
   --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* font-family: "Raleway", sans-serif;
-font-family: "Roboto", sans-serif; */
 
 body {
   font-family: Roboto;
@@ -14,6 +12,7 @@ body {
   color: var(--primary-text-color);
   text-decoration: none;
 }
+
 img {
   display: block;
   max-width: 100%;
@@ -45,9 +44,23 @@ ul {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 .section {
   padding: 94px 0px;
 }
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 .section-title {
   margin: 0px 0px 50px;
   font-weight: bold;
@@ -57,18 +70,6 @@ ul {
   letter-spacing: 0.03em;
 }
 
-.visually-hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
-}
-
-/*======== site header ===========*/
 .header {
   border: 1px solid #ececec;
 }
@@ -100,19 +101,22 @@ ul {
 .accent-logo {
   color: var(--accent-color);
 }
+
 .second-accent-logo {
   color: #000000;
 }
+
 .menu-nav {
   display: flex;
-
   padding: 0px;
   text-decoration: none;
   list-style-type: none;
 }
+
 .menu-nav__item {
   margin-right: 50px;
 }
+
 .menu-nav__item:last-child {
   margin-right: 0;
 }
@@ -129,20 +133,23 @@ ul {
   text-decoration: none;
   transition: color 250ms var(--cubic);
 }
-.menu-nav .menu-nav__link:active {
-  color: var(--accent-color);
-}
-.menu-nav .menu-nav__link:focus {
+
+.menu-nav__link:hover {
   color: var(--accent-color);
 }
 
-.menu-nav__link:hover {
+.menu-nav .menu-nav__link:active {
+  color: var(--accent-color);
+}
+
+.menu-nav .menu-nav__link:focus {
   color: var(--accent-color);
 }
 
 .active {
   color: var(--accent-color);
 }
+
 .active::after {
   position: absolute;
   left: 0;
@@ -154,8 +161,8 @@ ul {
   border-radius: 2px;
   background-color: var(--accent-color);
 }
-/*============ contacts section ============*/
 
+/*============ contacts section ============*/
 .contacts__list {
   display: flex;
   justify-content: flex-end;
@@ -166,6 +173,7 @@ ul {
 .contacts__item {
   margin-left: 50px;
 }
+
 .contacts__item:first-child {
   margin-left: 0;
 }
@@ -184,8 +192,7 @@ ul {
   transition: color 250ms var(--cubic);
 }
 
-.contacts__link:focus,
-.contacts__link:hover {
+.contacts__link:focus, .contacts__link:hover {
   color: var(--accent-color);
 }
 
@@ -198,26 +205,21 @@ ul {
   fill: var(--primary-text-color);
   margin-right: 10px;
 }
-.contacts-item:focus,
+
+.contacts__icon:focus, .contacts__icon:hover {
+  fill: var(--accent-color);
+}
+
+.contacts__icon .contacts-item:focus,
 .contacts-item:hover .contacts__icon {
   fill: var(--accent-color);
 }
-.contacts__icon:focus,
-.contacts__icon:hover {
-  fill: var(--accent-color);
-}
-/*============= MAIN =================*/
-/*=========== top section ==========*/
 
 .hero__background {
   background-color: #2f303a;
   max-width: 1600px;
   max-height: 600px;
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url("../images/Img-body.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/Img-body.jpg");
   background-repeat: no-repeat;
   margin: 0 auto;
   background-position: center;
@@ -228,6 +230,7 @@ ul {
   padding-top: 200px;
   padding-bottom: 200px;
 }
+
 .hero__titel {
   margin-bottom: 30px;
   text-align: center;
@@ -238,8 +241,8 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
-/*================ button ==============*/
 
+/*================ button ==============*/
 .hero__btn {
   display: block;
   text-align: center;
@@ -263,8 +266,6 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
-
-/*============ features =============*/
 
 .features__list {
   display: flex;
@@ -290,15 +291,19 @@ ul {
   border-radius: 4px;
   background-size: 70px;
 }
+
 .antenna::before {
   background-image: url("../images/antenna.svg");
 }
+
 .clock::before {
   background-image: url("../images/clock.svg");
 }
+
 .diagram::before {
   background-image: url("../images/diagram.svg");
 }
+
 .astronaut::before {
   background-image: url("../images/astronaut.svg");
 }
@@ -319,7 +324,6 @@ ul {
 }
 
 /*========= occupation ==========*/
-
 .occupation {
   margin-bottom: 94px;
 }
@@ -336,6 +340,7 @@ ul {
   margin-left: 30px;
   flex-basis: calc((100% / 3) - 30px);
 }
+
 .occupation__text {
   position: absolute;
   bottom: 0;
@@ -354,7 +359,6 @@ ul {
 }
 
 /*============= our-team =============*/
-
 .our-team {
   background: #f5f4fa;
 }
@@ -387,14 +391,12 @@ ul {
 
 .our-team__text {
   margin-top: 10px;
-
   font-size: 16px;
   line-height: 1.18;
   letter-spacing: 0.03em;
 }
 
 /* social-link */
-
 .social__list {
   display: flex;
   list-style: none;
@@ -417,8 +419,7 @@ ul {
   transition: fill 250ms var(--cubic), background-color 250ms var(--cubic);
 }
 
-.social__link:focus,
-.social__link:hover {
+.social__link:focus, .social__link:hover {
   background-color: var(--accent-color);
 }
 
@@ -438,7 +439,6 @@ ul {
 }
 
 /*=========== Regular customers ============*/
-
 .customers__list {
   display: flex;
   list-style: none;
@@ -452,6 +452,7 @@ ul {
 .customers__item:first-child {
   margin: 0;
 }
+
 .customers__link {
   outline: none;
   display: flex;
@@ -464,24 +465,23 @@ ul {
   transition: fill 250ms var(--cubic);
 }
 
-.customers__logo {
-  width: 50%;
-  height: 50%;
-}
-
-.customers__link:focus,
-.customers__link:hover {
+.customers__link:focus, .customers__link:hover {
   fill: var(--accent-color);
   border-color: var(--accent-color);
   box-sizing: border-box;
   border-radius: 4px;
 }
 
-/*============= footer ==========*/
+.customers__logo {
+  width: 50%;
+  height: 50%;
+}
 
+/*============= footer ==========*/
 .footer {
   background: #2f303a;
 }
+
 .footer-calc {
   flex-basis: calc((100% - 30px) / 2);
 }
@@ -493,6 +493,7 @@ ul {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+
 .footer-left-side {
   display: flex;
   justify-content: space-between;
@@ -542,14 +543,12 @@ ul {
 }
 
 /*======= join ========*/
-
 .join-titel {
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
   color: var(--primary-white-color);
 }
 
@@ -579,18 +578,15 @@ ul {
   border-radius: 44px;
   transition: background-color 250ms var(--cubic);
 }
-.social-item-footer:first-child {
-  margin-left: 0;
-}
-.footer-social__link:focus,
-.footer-social__link:hover {
+
+.footer-social__link:focus, .footer-social__link:hover {
   border-radius: 44px;
   background-color: var(--accent-color);
 }
+
 .footer-social__icon {
   width: 20px;
   height: 20px;
-
   fill: var(--primary-white-color);
 }
 
@@ -599,7 +595,6 @@ ul {
 }
 
 /* ======= footer-right-side ========== */
-
 .footer-right-side__title {
   margin-bottom: 20px;
   font-weight: bold;
@@ -639,20 +634,20 @@ ul {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
-.footer__btn:focus,
-.footer__btn:hover {
+
+.footer__btn:focus, .footer__btn:hover {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+
 .footer__btn-svg {
   width: 24px;
   height: 24px;
   margin-left: 10px;
 }
-/*=========== portfolio ==============*/
-/*=========== portfolio ==============*/
 
+/*=========== portfolio ==============*/
 .portfolio__list-btn {
   display: flex;
   flex-wrap: wrap;
@@ -680,12 +675,10 @@ ul {
   transition: background-color 250ms var(--cubic);
 }
 
-.portfolio__button:focus,
-.portfolio__button:hover {
+.portfolio__button:focus, .portfolio__button:hover {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-card__list {
@@ -709,9 +702,9 @@ ul {
 .portfolio-card__item:hover {
   border: 1px solid #eeeeee;
   box-sizing: border-box;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
 .portfolio-card__link {
   text-decoration: none;
 }
@@ -737,6 +730,7 @@ ul {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translatey(101%);
 }
+
 .portfolio-card__link:focus .portfolio-card__hidden-text,
 .portfolio-card__link:hover .portfolio-card__hidden-text {
   transform: translatey(0);
@@ -762,7 +756,6 @@ ul {
 }
 
 /* ============== backdrop ================= */
-
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -853,12 +846,10 @@ ul {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
+
 .modal__input:focus {
   border-color: var(--accent-color);
   outline: none;
-}
-.modal__input:focus + .modal-icon {
-  fill: var(--accent-color);
 }
 
 .modal__icon {
@@ -869,6 +860,10 @@ ul {
   width: 18px;
   height: 18px;
   transition: fill 250ms var(--cubic);
+}
+
+.modal__input:focus + .modal__icon {
+  fill: var(--accent-color);
 }
 
 .modal__message {
@@ -893,6 +888,7 @@ ul {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+
 .modal__term-desc {
   font-size: 14px;
   line-height: 24px;
@@ -923,6 +919,7 @@ ul {
 .modal__term:focus + .modal__term-desc::before {
   border: 2px solid var(--accent-color);
 }
+
 .modal__term-link {
   color: var(--accent-color);
 }
@@ -941,9 +938,9 @@ ul {
   transition: fill 250ms var(--cubic);
 }
 
-.modal__submit-btn:focus,
-.modal__submit-btn:hover {
+.modal__submit-btn:focus, .modal__submit-btn:hover {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+/*# sourceMappingURL=main.css.map */
